Revision history for Perl extension CGI::Application::Plugin::Session.

{{ $NEXT }}
    - Fix test fail due to date format changes in CGI::Cookie 4.58
      (RT#149959 Slaven Rezić)

1.05      2013-12-21 11:31:00 America/Chicago
    - Stop depending on ->DESTROY to call ->flush (reported by Gareth Tunley)

1.04      2013-11-14 10:48:29 America/Chicago

    - Fix hash randomization bug tickled by perl 5.18
      (Arthur Axel 'fREW' Schmidt)
    - Delete some dead code (RT#46587, Nate Smith)
    - Use instance name instead of global CGI::Session->name (Lee Carmichael)

1.03

    - Add session_recreate method (suggested by Robert Bauck Hamar)
    - Add session_loaded method (Sven Neuhaus)

1.02  Tue May 23 12:03:19 EDT 2006

    - When calling session_delete, make sure that the session is
      created first, in case the user hasn't called $self->session
      (Yuji Maeda)
    - When session_delete is called, make sure that we remove any
      session cookies that may be in the outgoing headers before
      adding in the session timeout cookie.

1.01  Fri Mar  3 21:03:45 EDT 2006

    - Fix bug when using CGI::Fast (reported by Yuji Maeda)
    - Clarify the SEND_COOKIE docs to mention that a cookie is only
      set if the session object is created during the request
      (Mark Stosberg)

1.00  Sun Feb  5 16:44:33 EDT 2006

  Bug fixes:
    - Test return value from CGI::Session to make sure the session
      object was created properly. (perlmonkey -at- gmail.com)

0.09  Sun Sep 11 21:22:06 EDT 2005

    - Added session_delete() method to send expired cookie to client
      (Jason Purdy)

0.08  Wed Jul  6 12:06:04 EDT 2005

    - Simplify the pod tests according to Test::Pod docs
    - Allow -expires attribute for the cookie header to be blank
      so that an expiry date is not put on the session automatically
      (Curtis Hawthorne)

0.07  Sat Jun 11 13:24:38 EDT 2005

    - New config option DEFAULT_EXPIRY which will automatically call