@@ -11,7 +11,7 @@ sub cgiapp_init {
 
     my $sid = $self->query->cookie('CGISESSID');
     $self->session_config(
-        CGI_SESSION_OPTIONS => [ "driver:File", $sid, {Directory=>'t/'} ],
+        CGI_SESSION_OPTIONS => [ "driver:File", $sid ],
         DEFAULT_EXPIRY => $ENV{DEFAULT_EXPIRY},
     );
 }
